# blender-mcp

./: .gitignore  AGENT-INSTALL.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
addon/: README.md  blender_mcp_bridge.py  cova_mcp_bridge.py
exports/: terrain_cam.gcode  terrain_solid_ho.stl
src/blender_mcp/: __init__.py  connection.py  debug.py  health.py  protocol.py  server.py  validators.py
src/cova_blender_mcp/: __init__.py  connection.py  protocol.py  server.py  validators.py
tests/: conftest.py  test_addon_unit.py  test_debug.py  test_integration.py  test_protocol.py  test_screenshot.py  test_server.py
